<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_list">GameListActivity</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="search">&quot;Search &quot;</string>
    <string name="searchText">Enter name of the Game</string>
    <string name="thumbnail">Game thumbnail</string>
    <string name="titleid">Game title</string>
    <string name="platforms">null</string>
    <string name="ratingid">no rating</string>
    <string name="title_activity_game">Game Activity</string>
    <string name="Description">Description</string>
    <string name="Title">Title</string>
    <string name="game_rating">Game Rating</string>
    <string name="game_platforms">Platforms</string>
    <string name="release_date">Release Date</string>
    <string name="num_of_reviews">Number of User Reviews</string>
    <string name="Link">Link to Wiki Page</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="Linkto">Link</string>
    <string name="trailer">Watch Video</string>
    <string name="title_activity_trailer">Trailer Activity</string>
    <string name="review">Read Review</string>
    <string name="title_activity_review">Review Activity</string>
    <string name="publishDate">"Publish Date: "</string>
    <string name="reviewer">Reviewer</string>
    <string name="score">Score</string>
    <string name="summary">Summary</string>

</resources>
