<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="460dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        tools:context=".GameActivity" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView2"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/thumbnail"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_alignTop="@id/imageView1"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/imageView1"
            android:text="@string/Description" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/imageView1"
            android:layout_below="@id/imageView1"
            android:layout_marginTop="12dp"
            android:text="@string/game_rating" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView3"
            android:layout_below="@id/textView3"
            android:layout_marginTop="12dp"
            android:text="@string/game_platforms" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView4"
            android:layout_below="@id/textView4"
            android:layout_marginTop="12dp"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView5"
            android:layout_below="@id/textView5"
            android:layout_marginTop="12dp"
            android:text="@string/num_of_reviews" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView6"
            android:layout_below="@id/textView6"
            android:layout_marginTop="12dp"
            android:autoLink="web"
            android:text="@string/Linkto" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textView7"
            android:layout_toRightOf="@id/textView7"
            android:layout_marginLeft="8dp"
            android:textColor="#0000ff"
            android:text="" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView7"
            android:layout_below="@id/textView8"
            android:text="@string/review" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/button2"
            android:layout_alignBottom="@id/button2"
            android:layout_toRightOf="@id/button2"
            android:layout_marginLeft="10dp"
            android:text="@string/trailer" />

    </RelativeLayout>

</ScrollView>
