<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll2"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ReviewActivity" >

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/Title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/titleView"
            android:layout_below="@id/titleView"
            android:layout_marginTop="12dp"
            android:text="@string/reviewer" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/revView"
            android:layout_below="@id/revView"
            android:layout_marginTop="12dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/scoreView"
            android:layout_below="@id/scoreView"
            android:layout_marginTop="12dp"
            android:text="@string/publishDate" />

        <TextView
            android:id="@+id/sumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/publish"
            android:layout_below="@id/publish"
            android:layout_marginTop="12dp"
            android:text="@string/summary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/sumView"
            android:layout_below="@id/sumView"
            android:layout_marginTop="12dp"
            android:text="@string/Description" />
    </RelativeLayout>

</ScrollView>
