<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dip" >
 
    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip">
 
        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/thumbnail" />
 
    </LinearLayout>
 
    <!-- Title Of Song-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/thumbnail"
        android:layout_toRightOf="@id/thumbnail"
        android:text="@string/titleid"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"/>
 
    <TextView
        android:id="@+id/game_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:textColor="#343434"
        android:textSize="12sp"
        android:text="@string/ratingid"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@id/thumbnail" />
    
    <TextView
        android:id="@+id/platforms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/game_rating"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_marginLeft="6dip"
        android:layout_toRightOf="@id/game_rating"
        android:text="@string/platforms" />
 
</RelativeLayout>
